package com.bloomtech.asylumrgbea.models;

import lombok.Data;
import lombok.NoArgsConstructor;

@Data
public class AsylumCaseRequestDto {
}
