@startuml

'End point mappings
class AsylumCaseController {
    - service : AsylumCaseService
    + getAllCases() : Iterable<AsylumCaseResponseDto>
    + getAllCases(page : Integer, asylumCaseRequestDto : AsylumCaseRequestDto) : Iterable<AsylumCaseResponseDto>
}

class AsylumCaseControllerAdvice {
    + handleAsylumCaseNotFoundException(httpServletRequest : HttpServletRequest, asylumCaseNotFoundException : AsylumCaseNotFoundException) : ErrorDto
    + handleBadRequestException(httpServletRequest : HttpServletRequest, badRequestException : BadRequestException) : ErrorDto
}

class AsylumCaseNotFoundException<RuntimeException> {
    - {static} final serialVersionUID : long
    - message : String
}

class BadRequestException<RuntimeException> {
    - {static} final serialVersionUID : long
    - message : String
}

'Add cache config Annotations in service
interface AsylumCaseService {
    getAllAsylumCases() : Iterable<AsylumCaseResponseDto>
    getAllAsylumCases(asylumCaseRequestDto : AsylumCaseRequestDto) : Iterable<AsylumCaseResponseDto>
}

class AsylumCaseServiceImpl {
    - asylumCaseRepository : AsylumCaseRepository
    - asylumCaseMapper : AsylumCaseMapper
    + getAllAsylumCases() : Iterable<AsylumCaseResponseDto>
    + getAllAsylumCases(asylumCaseRequestDto : AsylumCaseRequestDto) : Iterable<AsylumCaseResponseDto>
}

'Config for DynamoDB
class DynamoDBConfig {
    - awsAccessKey : String
    - awsSecretKey : String
    - awsDynamoDBEndPoint : String
    + amazonAWSCredentials() : AWSCredentials
    + amazonAWSCredentialsProvider() : AWSCredentialsProvider
    + amazonDynamoDB() : AmazonDynamoDB
    + mapper() : DynamoDBMapper
}

'repo for DynamoDB calls
interface AsylumCaseRepository <PagingAndSortingRepository<AsylumCase, Integer>> { }

'Entity for data model
class AsylumCase {
    - id : Integer
    - asylumOffice : String
    - citizenship : String
    - raceOrEthnicity : String
    - caseOutcome : String
    - completion : String
    - currentDate : String
}

class ErrorDto {
    - message : String
}

class AsylumCaseRequestDto {
    - page : Integer
}

class AsylumCaseResponseDto {
    - asylumOffice : String
    - citizenship : String
    - raceOrEthnicity : String
    - caseOutcome : String
    - completion : String
    - currentDate : String
}

' Part of the  MapStruct dependency
interface AsylumCaseMapper {
    requestToEntity(asylumCaseRequestDto : AsylumCaseRequestDto) : AsylumCase
    entityToResponseDto(asylumCase : AsylumCase) : AsylumCaseResponseDto
    entitiesToResponsesDtos(asylumCases : Iterable<AsylumCase>) : Iterable<AsylumCaseResponseDto>
    pageToResponseDtos(Page<AsylumCase> asylumCases) : Iterable<AsylumCaseResponseDto>
}

'Not owned classes & interfaces
interface PagingAndSortingRepository <CrudRepository> {
    findAll(sort : Sort) : Iterable<AsylumCase>
    findAll(pageable : Pageable) : Page<AsylumCase>
}

interface CrudRepository <Repository> {
    save(asylumCase : AsylumCase) : AsylumCase
    saveAll(iterable : Iterable<AsylumCase>) : Iterable<AsylumCase>
    findById(id : ID) : Optional<AsylumCase>
    existsById(id : ID) : boolean
    findAll() : Iterable<AsylumCase>
    findAllById(ids : Iterable<ID>) : Iterable<AsylumCase>
    count() : long
    deleteById(id : ID) : void
    delete(asylumCase : AsylumCase) : void
    deleteAllById(ids : Iterable<ID>) : void
    deleteAll(asylumCases : Iterable<AsylumCase>) : void
    deleteAll() : void
}

AsylumCaseController *-- AsylumCaseServiceImpl
AsylumCaseController .. AsylumCaseNotFoundException
AsylumCaseController .. BadRequestException
AsylumCaseController .. ErrorDto

AsylumCaseNotFoundException .. AsylumCaseControllerAdvice
BadRequestException .. AsylumCaseControllerAdvice

AsylumCaseControllerAdvice .. ErrorDto

AsylumCaseServiceImpl <|-- AsylumCaseService
AsylumCaseServiceImpl *-- AsylumCaseRepository
AsylumCaseServiceImpl *-- AsylumCaseMapper


AsylumCaseMapper .. AsylumCaseRequestDto
AsylumCaseMapper .. AsylumCaseResponseDto

AsylumCaseRequestDto -- AsylumCase

AsylumCaseResponseDto -- AsylumCase

AsylumCaseRepository  o-- PagingAndSortingRepository
AsylumCaseRepository -- DynamoDBConfig

PagingAndSortingRepository  o-- CrudRepository

'Extension/
'Association <|-- (owner <|-- pet) Implements
'Composition *-- (pet *-- leg) Instantiation (part of)
'Aggregation (car o-- wheel) Extends (has a)

@enduml